Fixed footer z-index

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -7,7 +7,7 @@
 footer {
     border-top: $border-weight_m solid $brand-primary-color;
     background: #fff;
-    // z-index: 20;
+    z-index: 20;
     position: relative;
     width: 100%;
     // height: $footer-height + 2px;
